<resources>
    <string name="app_name">HomeKitchenSeller</string>
    <string name="home">HOME</string>
    <string name="kitchen">KITCHEN</string>
    <string name="enter_phone_number_heading">Enter your phone number</string>
    <string name="flag">flag</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="tv_continue">CONTINUE</string>
    <string name="login_using">Don\'t want to sign in?</string>
    <string name="clickhere">Click here</string>
    <string name="default_code">(111)</string>
    <string name="otp_verification_heading">OTP Verification</string>
    <string name="otp_sub_heading">Enter the OTP sent to </string>
    <string name="didnot_get_otp">Didn\'t get the OTP?</string>
    <string name="resent">RESEND</string>
    <string name="onboardtextone">All your favorites</string>
    <string name="onboardtexttwo">Free delivery orders</string>
    <string name="onboardtextthree">Free delivery orders</string>
    <string name="onboardsubtextone">Order from the best local kitchens with easy, on-demand delivery.</string>
    <string name="onboardsubtexttwo">Free delivery for new customers via ApplePay and other payment methods.</string>
    <string name="onboardsubtextthree">Free delivery for new customers via ApplePay and other payment methods.</string>
    <string name="skip">SKIP</string>
    <string name="phon_number_sub_heading">we will send you 4 digit verification code</string>
    <string name="enable_location">Enable Your Location</string>
    <string name="btn_enable_location">Enable Location</string>
    <string name="enable_location_message">Please allow to use your location to show nearby restaurant on the map.</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="hint_email_id">Enter your email id</string>
    <string name="terms_and_condition">
        By clicking save, you’re agree to our
        <a href="https://www.google.com/tos">Terms of use</a>
        <a href="https://www.google.com/privacy">Privacy policy</a>
    </string>
    <!--
        <string name="terms_and_condition">By clicking save, you’re agree to our Terms of use Privacy policy</string>
    -->
    <string name="terms">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="almost_there">You\'re almost there</string>
    <string name="info_sub_heading">Complete this process so you can order your favorite food even faster.</string>
    <string name="home_navigation_title">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_fav">Favorites</string>
    <string name="nav_cat">Explore</string>
    <string name="nav_order">Orders</string>
    <string name="empty_mobile_error">Please enter mobile number.</string>
    <string name="error_invalid_mobile">Please enter valid mobile number.</string>
    <string name="empty_country_code">Enter country code</string>
    <string name="default_error">Unable to connect. Please try after sometime.</string>
    <string name="internet_check">Looks like slow or no internet connectivity. Please check and try again</string>
    <string name="retrofit_error">Sorry, something seems to be broken, please try again later!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="incomplete_data">Incomplete Data</string>
    <string name="connection">Connection</string>
    <string name="otp_cannot_be_empty">Please enter the OTP</string>
    <string name="valid_email_required">Enter valid email id</string>
    <string name="valid_name_required">Enter valid name</string>
    <string name="hint_search">Search your favorite food</string>
    <string name="verifiedkitchens">Verified Kitchens</string>
    <string name="bestseller">Best Seller</string>
    <string name="topRated">Top Rated</string>
    <string name="test_name">Pizza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="to_take">To take</string>
    <string name="not_now">Not Now</string>
    <string name="location">location</string>
    <string name="storage">storage</string>
    <string name="address_not_found">Address not found</string>
    <string name="tap_select"><![CDATA[Tap Settings&gt;Permissions, and turn]]></string>
    <string name="category">Category</string>
    <string name="rg_text_kitchen">Kitchens</string>
    <string name="rg_text_items">Items</string>
    <string name="You_are_now_discover">You are now discover</string>
    <string name="Search_food_and_kitchens">Search food and kitchens</string>
    <string name="header">Recent Search</string>
    <string name="Nearest_me">Nearest me</string>
    <string name="Filter">Filter</string>
    <string name="Reset">Reset</string>
    <string name="APPLY">APPLY</string>
    <string name="Price">Price</string>
    <string name="Open_now">Open now</string>
    <string name="vegiterian">100% vegiterian</string>
    <string name="Free_delivery">Free delivery</string>
    <string name="extra">Extra Filter</string>
    <string name="sort">Sort</string>
    <string name="CostHightoLow">Cost High to Low</string>
    <string name="CostLowtoHigh">Cost Low to High</string>
    <string name="Rating">Rating</string>
    <string name="popolar_item">Popular Items</string>
    <string name="popolar_kitchen">Popular Kitchen</string>
    <string name="Notification">Notification</string>
    <string name="NoNotification">No Notification</string>
    <string name="NoNotificationsub">Hey buddy! We\'ll notify you when there is something new</string>
    <string name="result_list">Result Salad (21)</string>
    <string name="MenuItems">Menu Items</string>
    <string name="ReviewRating"><![CDATA[Review & Rating]]></string>
    <string name="FeaturedItem">Featured Item</string>
    <string name="reviewheading">Reviews</string>
    <string name="Shareyourfeedback">Share your feedback!</string>
    <string name="feedback_sub_title">Do you have a suggestion or found some bug? Let us know in the field below.</string>
    <string name="feedback_sub_sub_title">How was your experience?</string>
    <string name="Freedlivery">Free delivery</string>
    <string name="photo">Photo</string>
    <string name="bookmark">Bookmark</string>
    <string name="Information">Information</string>
    <string name="Description">Description</string>
    <string name="photos">Photos</string>
    <string name="Seeallreviews">See all reviews</string>
    <string name="ItemTotal">Item Total</string>
    <string name="AddtoCart">Add to Cart</string>
    <string name="extrsItem">Extra Item</string>
    <string name="Reviews">Reviews</string>
    <string name="OrderItems">ORDER ITEMS</string>
    <string name="TotalPrice">Total Price</string>
    <string name="DeliveryCharge">Delivery Charge</string>
    <string name="GrandTotal">Grand Total</string>
    <string name="TrackOrder">Track Order</string>
    <string name="Profile">Profile</string>
    <string name="MyDetails">My Details</string>
    <string name="PaymentMethods">Payment Methods</string>
    <string name="ManageAddress">Manage Address</string>
    <string name="MyOrders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="AddNewAddress">Add New Address</string>
    <string name="Default_address">DEFAULT ADDRESS</string>
    <string name="Mobile">Mobile :</string>
    <string name="other_address">OTHER ADDRESS</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="MyAddress">My Address</string>
    <string name="Setadeliveryaddress">Set a delivery address</string>
    <string name="YourLocation">Your Location</string>
    <string name="Change">Change</string>
    <string name="LocationDetails">Location Details</string>
    <string name="HouseFlatNumber">House/Flat Number</string>
    <string name="EnterHouseFlatNumber">Enter House/Flat Number</string>
    <string name="Landmark">Landmark</string>
    <string name="EnterLandmark">Enter Landmark</string>
    <string name="SaveAs">Save As</string>
    <string name="Home">Home</string>
    <string name="Office">Office</string>
    <string name="Others">Others</string>
    <string name="Next">Next</string>
    <string name="saveAddres">SaveAddress</string>
    <string name="Searchfoodandkitchens">Search food and kitchens</string>
    <string name="Items">Items</string>
    <string name="Total">Total</string>
    <string name="Addnewcard">Add new card</string>
    <string name="Cashondelivery">Cash on delivery</string>
    <string name="Addyourcard">Add your card</string>
    <string name="Cardholdername">Card holder name</string>
    <string name="CardNumber">Card Number</string>
    <string name="Entercardholdername">Enter card holder name</string>
    <string name="Expirydate">Expiry date</string>
    <string name="MonthYear">Month/Year</string>
    <string name="CVV">CVV</string>
    <string name="Enteryourcarddetails">Enter your card details</string>
    <string name="ADDCard">ADD Card</string>
    <string name="SAVE">SAVE</string>
    <string name="OtherDetails">OTHER DETAILS</string>
    <string name="YourName">Your Name</string>
    <string name="Name">Name</string>
    <string name="YourEmailID">Your Email ID</string>
    <string name="EmailID">Email ID</string>
    <string name="YourPhoneNumber">Your Phone Number</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="ActiveOrder">Active Order</string>
    <string name="PastOrder">Past Order</string>
    <string name="signin">sign in</string>
    <string name="signup">sign up</string>
</resources>