<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hk.seller.login.presentation.viewmodel.LoginViewModel" />

        <variable
            name="activity"
            type="com.hk.seller.login.presentation.view.LoginActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_20sdp"
        android:id="@+id/constraintLayout"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tv_contact_header"
            style="@style/login_module_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/enter_phone_number_heading"
            android:textAlignment="gravity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_contact_subheader"
            style="@style/login_module_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/phon_number_sub_heading"
            android:textAlignment="gravity"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_header" />

        <LinearLayout
            android:id="@+id/ln_mobile_number_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_subheader">


            <ImageView
                android:id="@+id/im_flagImage"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/flag"
                />


            <TextView
                android:id="@+id/phcode"
                style="@style/phonecode_loin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:focusableInTouchMode="true"
                android:onClick="@{() -> viewModel.countryCodeClicked()}"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@{viewModel.countryCode}" />

            <ImageView
                android:id="@+id/drop_down_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:contentDescription="@string/flag"
                 />

            <com.hk.seller.utils.ClearableEditText
                android:id="@+id/mobile_field"
                style="@style/phonnumber_loin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/mobilenumber"
                android:inputType="number"
                android:layoutDirection="locale"
                android:paddingRight="@dimen/_10sdp"
                android:text="@={viewModel.phoneNumber}"
                 />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_continue"
            style="@style/tv_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onNextClick()}"
            android:padding="@dimen/_10sdp"
            android:text="@{viewModel.btnNextText}"
            android:textAlignment="gravity"
            app:layout_constraintTop_toBottomOf="@id/ln_mobile_number_panel" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_2sdp"
            android:visibility="@{viewModel.showProgress}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_continue"
            app:layout_constraintEnd_toEndOf="@+id/tv_continue"
            app:layout_constraintStart_toStartOf="@+id/tv_continue"
            app:layout_constraintTop_toTopOf="@+id/tv_continue" />


        <LinearLayout
            android:id="@+id/ln_login_via_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_continue">

            <TextView
                android:id="@+id/tv_dont_want"
                style="@style/dont_want_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login_using" />

            <TextView
                android:id="@+id/click_here"
                style="@style/dont_want_login_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickhere" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>