<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.hk.seller.login.presentation.viewmodel.VerifyOtpViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_30sdp">


        <TextView
            android:id="@+id/tv_otp_header"
            style="@style/login_module_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/otp_verification_heading"
            android:textAlignment="gravity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_otp_subheader"
            style="@style/login_module_subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="@{() -> viewModel.editPhoneNumber()}"
            android:text="@={viewModel.phonewithCountry}"
            android:textAlignment="gravity"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_otp_header" />

        <com.hk.seller.utils.PinEntryEditText
            android:id="@+id/otp_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@null"
            android:cursorVisible="true"
            android:focusable="true"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:text="@={viewModel.otp}"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_otp_subheader"
            app:pinAnimationType="fromBottom"
            app:pinBackgroundIsSquare="true"
            app:pinCharacterSpacing="@dimen/_20sdp"
            app:pinTextBottomPadding="16dp" />

        <LinearLayout
            android:id="@+id/ln_login_via_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_field">

            <TextView
                android:id="@+id/tv_dont_want"
                style="@style/dont_want_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/didnot_get_otp" />

            <TextView
                android:id="@+id/click_here"
                style="@style/dont_want_login_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/resent" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_continue"
            style="@style/tv_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.verifyOtp()}"
            android:padding="@dimen/_10sdp"
            android:text="@{viewModel.btnNextText}"
            android:textAlignment="gravity"
            app:layout_constraintTop_toBottomOf="@id/ln_login_via_otp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_2sdp"
            android:visibility="@{viewModel.showProgress}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_continue"
            app:layout_constraintEnd_toEndOf="@+id/tv_continue"
            app:layout_constraintStart_toStartOf="@+id/tv_continue"
            app:layout_constraintTop_toTopOf="@+id/tv_continue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>